# fdm_materials

./: .gitlab-ci.yml  CMakeLists.txt  PolyFlex_tpu95_175.xml.fdm_material  PolyLite_abs_175.xml.fdm_material  PolyLite_asa_175.xml.fdm_material  PolyLite_pc_175.xml.fdm_material  PolyLite_petg_175.xml.fdm_material  PolyLite_pla_175.xml.fdm_material  PolyMax_pc_175.xml.fdm_material  PolyMax_petg_175.xml.fdm_material  PolyMax_pla_175.xml.fdm_material  PolyMide_copa_175.xml.fdm_material  PolyMide_pa6_cf_175.xml.fdm_material  PolyMide_pa6_gf_175.xml.fdm_material  PolySmooth_175.xml.fdm_material
